# ShaRKBR33D

./: CMakeLists.txt  README.md
livearea/: template.xml
source/: dialogs.cpp  dialogs.h  main.cpp  network.cpp  network.h  promoter.cpp
user/: main.c
